--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ matrix:
     include:
     - python: "3.5"
       env: SKLEARN="0.17.1"
-    - python: "3.4"                                                                                         
+    - python: "3.4" 
       env: SKLEARN="0.17.1"
-    - python: "2.7"                                                                                         
+    - python: "2.7" 
       env: SKLEARN="0.17.1"
 
 # setup adapted from https://github.com/soft-matter/trackpy/blob/master/.travis.yml
@@ -25,10 +25,9 @@ install:
     - python setup.py install
     - cd ..
 
-
 script: 
     - cd /
-    - python -c "import freediscovery.tests as ft; ft.run()"
+    - python -c "import freediscovery.tests as ft; ft.run_cli()"
 
 #after_success:
 #    coveralls
