--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ install:
   - conda update -q conda
   - conda info -a
   # create a conda virtual environement 
-  - "cd C:\\projects\\freediscovery-lc2fo"
+  - "cd C:\\projects\\freediscovery"
   - "conda create -n freediscovery-env --yes --file .\\build_tools\\requirements_conda.txt python=%PYTHON_VERSION%"
   - activate freediscovery-env
   - "pip install -r .\\build_tools\\requirements_pip_win.txt"
