--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,3 +44,25 @@ test_script:
   - activate freediscovery-env # activate the virtualenv
   - "cd C:\\projects\\freediscovery\\freediscovery\\tests" # just to avoid full relative path in py.test
   - python -c "import freediscovery.tests as ft; ft.run_cli()"
+# Running the examples on windows is not working yet
+# This should be easier after #9 is implemented
+#  - "cd C:\\projects\\freediscovery"
+#  - ps: |
+#        if (!(Test-Path -Path "freediscovery_shared")) {
+#            New-Item -ItemType directory -Path "freediscovery_shared"
+#        }
+#        conda install -c anaconda curl=7.49.0
+#        if (!(Test-Path -Path "freediscovery_shared\\treclegal09_2k_subset.tar.gz")) {
+#            Remove-item alias:curl # https://stackoverflow.com/questions/25044010/running-curl-on-64-bit-windows
+#            cd "freediscovery_shared"
+#            curl "http://r0h.eu/d/treclegal09_2k_subset.tar.gz" -L -o "treclegal09_2k_subset.tar.gz"
+#            tar xzf treclegal09_2k_subset.tar.gz
+#            cd -
+#        }
+#  - START /B python scripts/run_api.py "freediscovery_shared"
+#  - ps: |
+#        cd ".\\examples"
+#        Get-ChildItem ".\\" -Filter *.py | 
+#        Foreach-Object {
+#            python $_.FullName
+#        }
