--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,17 +42,15 @@ test_script:
   - activate freediscovery-env # activate the virtualenv
   - "cd C:\\projects\\freediscovery\\freediscovery\\tests" # just to avoid full relative path in py.test
   - python -c "import freediscovery.tests as ft; ft.run_cli()"
-# Running the examples on windows is not working yet
-# This should be easier after #9 is implemented
-#  - "cd C:\\projects\\freediscovery"
-#  - ps: |
-#        if (!(Test-Path -Path "freediscovery_shared")) {
-#            New-Item -ItemType directory -Path "freediscovery_shared"
-#        }
-#  - START /B python scripts/run_api.py "freediscovery_shared"
-#  - ps: |
-#        cd ".\\examples"
-#        Get-ChildItem ".\\" -Filter *.py | 
-#        Foreach-Object {
-#            python $_.FullName
-#        }
+  - "cd C:\\projects\\freediscovery"
+  - ps: |
+        if (!(Test-Path -Path ".\\freediscovery_shared")) {
+            New-Item -ItemType directory -Path ".\\freediscovery_shared"
+        }
+  - ps: Start-Process -FilePath "python" -ArgumentList "scripts\\run_api.py freediscovery_shared" -WorkingDirectory ".\\"
+  - ps: |
+        cd ".\\examples"
+        Get-ChildItem ".\\" -Filter *.py | 
+        Foreach-Object {
+            python $_.FullName
+        }
