--- a/build_tools/requirements_pip_unix.txt
+++ b/build_tools/requirements_pip_unix.txt
@@ -4,7 +4,7 @@ webargs==1.4.0
 flask_apispec
 xgboost==0.4a30 # version 0.6 currently broken for sparse arrays https://github.com/dmlc/xgboost/issues/1238#issuecomment-247787192
 nltk
-scikit-learn==0.17.1  # as long as the 0.18 is not released
+scikit-learn==0.18.1
 git+https://github.com/rth/simhash-py.git
 # gensim # not used at present
 # coverage # not used at present
