--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,7 +48,7 @@ test_script:
         if (!(Test-Path -Path ".\\freediscovery_shared")) {
             New-Item -ItemType directory -Path ".\\freediscovery_shared"
         }
-  - ps: Start-Process -FilePath "python" -ArgumentList "scripts\\run_api.py freediscovery_shared" -WorkingDirectory ".\\"
+  - ps: Start-Process -FilePath "python" -ArgumentList "scripts\\run_api.py freediscovery_shared" -WorkingDirectory ".\\" -Verbose
   - ps: |
         cd ".\\examples"
         Get-ChildItem ".\\" -Filter *.py | 
@@ -57,7 +57,5 @@ test_script:
         }
         if (sls "Traceback \(most recent call last\):" log.txt -ca -quiet) {
             exit 1
-        } else {
-            exit 0
         }
 
