--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ install:
   - conda config --append channels conda-forge
   - "conda create -n freediscovery-env --yes --file .\\build_tools\\requirements_conda.txt python=%PYTHON_VERSION%"
   - activate freediscovery-env
-  - "pip install -r .\\build_tools\\requirements_pip_win.txt"
+  - "pip install -r .\\build_tools\\requirements_pip.txt"
   - python setup.py develop 
 
 test_script:
