--- a/build_tools/docker/nginx.conf
+++ b/build_tools/docker/nginx.conf
@@ -14,6 +14,8 @@ server {
     uwsgi_read_timeout 86400;
     uwsgi_send_timeout 86400;
 
+    client_max_body_size 2000M;
+
     location / {
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi.sock;
