--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
     # See: http://stackoverflow.com/a/13751649/163740
     WITH_COMPILER: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_compiler.cmd"
   matrix:
-    - PYTHON_VERSION: 3.5
+    - PYTHON_VERSION: 3.6
       PYTHON_ARCH: "64"
       MINICONDA: C:\Miniconda3-x64
     - PYTHON_VERSION: 2.7
@@ -34,9 +34,8 @@ install:
   # create a conda virtual environement 
   - "cd C:\\projects\\freediscovery"
   - conda config --append channels conda-forge
-  - "conda create -n freediscovery-env --yes --file .\\build_tools\\requirements_conda.txt python=%PYTHON_VERSION%"
+  - "conda create -n freediscovery-env --yes --file requirements.txt python=%PYTHON_VERSION%"
   - activate freediscovery-env
-  - "pip install -r .\\build_tools\\requirements_pip.txt"
   - python setup.py develop 
 
 test_script:
