--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,6 +43,9 @@ test_script:
   - "cd C:\\projects\\freediscovery\\freediscovery\\tests" # just to avoid full relative path in py.test
   - python -c "import freediscovery.tests as ft; ft.run_cli()"
   - "cd C:\\projects\\freediscovery"
+  # install matplotlib which we don't add as a core dependency but which is used in examples
+  - pip install matplotlib==1.5.3
+  # now start the server and run the examples
   - ps: |
         if (!(Test-Path -Path ".\\freediscovery_shared")) {
             New-Item -ItemType directory -Path ".\\freediscovery_shared"
