--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,9 @@ environment:
     - PYTHON_VERSION: 3.6
       PYTHON_ARCH: "64"
       MINICONDA: C:\Miniconda3-x64
-    - PYTHON_VERSION: 2.7
-      PYTHON_ARCH: "64"
-      MINICONDA: C:\Miniconda-x64
+    #- PYTHON_VERSION: 2.7
+    #  PYTHON_ARCH: "64"
+    #  MINICONDA: C:\Miniconda-x64
     # not running the other tests at the moment
     # as AppVeyor is just too slow
     #- PYTHON_VERSION: 2.7
