--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,28 @@
+machine:
+  environment:
+    PATH: /home/ubuntu/miniconda2/bin:$PATH
+
 # adapted from https://github.com/scikit-learn/scikit-learn/blob/master/circle.yml
+# conda setup inspired by https://github.com/nilearn/nilearn/pull/1037
 dependencies:
 
+  pre:
+    # Get rid of existing virtualenvs on circle ci as they conflict with conda.
+    # Trick found here:
+    # https://discuss.circleci.com/t/disable-autodetection-of-project-or-application-of-python-venv/235/10
+    - cd && rm -rf ~/.pyenv && rm -rf ~/virtualenvs
+    - sudo -E apt-get -yq update
+    - sudo -E apt-get -yq remove texlive-binaries --purge
+    - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install dvipng texlive-latex-base texlive-latex-extra build-essential g++
   # Check whether the doc build is required, install build dependencies and
   # run sphinx to build the doc.
   override:
-    - ./build_tools/circle/build_doc.sh:
-       timeout: 3600 # seconds
-    - python scripts/run_api.py ../freediscovery_shared:
+    - source build_tools/circle/install.sh
+    - source activate testenv && python scripts/run_api.py ../freediscovery_shared:
        background: true
     - sleep 20
     # The pipefail is requested to propagate exit code
-    - set -o pipefail && cd doc && make html 2>&1 | tee ~/log.txt
+    - set -o pipefail && cd doc && source activate testenv && make html 2>&1 | tee ~/log.txt
     - npm install -g bootprint && npm install -g bootprint-openapi
     - cd doc && bootprint openapi http://0.0.0.0:5001/openapi-specs.json openapi-docs && cp -r openapi-docs/ _build/html/
 
