--- a/build_tools/requirements_extra_pip.txt
+++ b/build_tools/requirements_extra_pip.txt
@@ -7,3 +7,7 @@ sphinx_rtd_theme==0.1.10a0
 sphinx-gallery==0.1.5
 pillow==3.4.2
 mock
+sphinx-argparse
+CommonMark==0.5.5
+sphinxcontrib-autoprogram
+
