--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy==1.12.0       # core  libraries
-scipy==0.19.0
-pandas==0.19.2
-scikit-learn==0.18.1
-nltk==3.2.1
-pytest==3.0.5      
-flask==0.12.1         # server
-requests==2.13.0
+numpy>=1.10.1       # core  libraries
+scipy>=0.16.1
+pandas>=0.18.0,<0.21
+scikit-learn>=0.17.0,<0.19
+nltk>=3.2.1
+pytest>=3.0.1
+flask>=0.12.0         # web libraries
+requests>=2.7.0
 marshmallow==2.12.2
 webargs==1.5.3
 flask-apispec==0.3.2
