--- a/.travis.yml
+++ b/.travis.yml
@@ -38,12 +38,11 @@ script:
         FDSERVER_PID=$!
         sleep 20  
     - | 
-        cd examples/
         set -o pipefail
-        for f in ./*.py; do 
-           python $f >> log.txt
+        for f in examples/*.py; do 
+           python $f >> ~/log.txt
         done
-        cat log.txt && if grep -q "Traceback (most recent call last):" ~/log.txt; then false; else true; fi
+        cat ../freediscovery_shared/freediscovery-backend.log && cat ~/log.txt && if grep -q "Traceback (most recent call last):" ~/log.txt ../freediscovery_shared/freediscovery-backend.log; then false; else true; fi
 
 after_success:
     codecov --token=${CODECOV_TOKEN}
