Remove the PY3.5 travis test for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ matrix:
       env: REQUIREMENTS="requirements.txt" EXTRA_DEPS=""
     - python: "3.6"
       env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="simhash-py gunicorn"
-    - python: "3.5"
-      env: REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS=""
+      #- python: "3.5"
+      #- env: REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS=""
     - python: "3.5" 
       env: REQUIREMENTS="requirements.txt" EXTRA_DEPS=""
 
