--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
         sleep 20  
     - | 
         set -o pipefail
-        for f in examples/*.py; do 
+        for f in examples/*/*.py; do 
            python $f >> ~/log.txt
         done
         cat ../freediscovery_shared/freediscovery-backend.log && cat ~/log.txt && if grep -q "Traceback (most recent call last):" ~/log.txt ../freediscovery_shared/freediscovery-backend.log; then false; else true; fi
