--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,12 +47,17 @@ test_script:
   # now start the server and run the examples
   - ps: Start-Process -FilePath "freediscovery" -ArgumentList "run -y --cache-dir ..\\freediscovery_shared" -WorkingDirectory ".\\" -Verbose
   - ps: |
-        cd ".\\examples"
+        cd ".\\examples\\python"
         Get-ChildItem ".\\" -Filter *.py | 
         Foreach-Object {
             python $_.FullName 2>&1 | Tee-Object -Append -FilePath "log.txt"
         }
-        type "..\\..\\freediscovery_shared\\freediscovery-backend.log"
+        cd "..\\engine"
+        Get-ChildItem ".\\" -Filter *.py | 
+        Foreach-Object {
+            python $_.FullName 2>&1 | Tee-Object -Append -FilePath "log.txt"
+        }
+        type "..\\..\\..\\freediscovery_shared\\freediscovery-backend.log"
         if (sls "Traceback \(most recent call last\):" log.txt -ca -quiet) {
             exit 1
         }
