--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy>=1.10.1       # core  libraries
 scipy>=0.16.1
 pandas>=0.18.0,<0.21
-scikit-learn>=0.18.0,<0.19
+scikit-learn>=0.18.0
 nltk>=3.2.1
 pytest>=3.0.1
 nose
