--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,16 @@ dist: trusty
 matrix:
     include:
     - python: "3.6"
-      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS=""
+      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="" SKLEARN_OLD=false
     - python: "3.6"
-      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="simhash-py gunicorn"
+      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="simhash-py gunicorn" SKLEARN_OLD=false
     - python: "3.6"
-      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="scikit-learn==0.18.1"
+      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="" SKLEARN_OLD=true
     - python: "3.5"
-      env: REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS=""
+      env: REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS="" SKLEARN_OLD=false
     - python: "3.5" 
-      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS=""
+      env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="" SKLEARN_OLD=false
 
-# setup adapted from https://github.com/soft-matter/trackpy/blob/master/.travis.yml
 before_install:
     - wget http://repo.continuum.io/miniconda/Miniconda${TRAVIS_PYTHON_VERSION:0:1}-latest-Linux-x86_64.sh -O miniconda.sh
     - chmod +x miniconda.sh
@@ -24,8 +23,20 @@ before_install:
     - conda info -a
 
 install: 
-    - conda config --append channels conda-forge
+    - |
+       if [ "$REQUIREMENTS" = "requirements.txt" ] ; then 
+          # use default conda chanel by default
+          conda config --append channels conda-forge
+       else
+          # use conda-forge channel by default
+          # since the default channel has some issues with gfortran for those versions
+          conda config --add channels conda-forge
+       fi
     - conda install --yes --file ${REQUIREMENTS} ${EXTRA_DEPS} python=${TRAVIS_PYTHON_VERSION}
+    - | 
+        if [ "$SKLEARN_OLD" = true ] ; then 
+           conda install -y scikit-learn==0.18.0
+        fi
     - pip install .
 
 script:
