--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
       env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="simhash-py gunicorn" SKLEARN_OLD=false
     - python: "3.6"
       env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="" SKLEARN_OLD=true
-    - python: "3.5"
-      env: REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS="" SKLEARN_OLD=false
+    #- python: "3.5"
+    #- env: REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS="" SKLEARN_OLD=false
     - python: "3.5" 
       env: REQUIREMENTS="requirements.txt" EXTRA_DEPS="" SKLEARN_OLD=false
 
