--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,62 +3,68 @@ build: false
 
 environment:
   global:
-    # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
-    # /E:ON and /V:ON options are not enabled in the batch script intepreter
-    # See: http://stackoverflow.com/a/13751649/163740
-    WITH_COMPILER: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_compiler.cmd"
+      PYTHON: "C:\\conda"
+      CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci-helpers\\appveyor\\windows_sdk.cmd"
+      PYTHON_ARCH: "64" # needs to be set for CMD_IN_ENV to succeed. If a mix
+                        # of 32 bit and 64 bit builds are needed, move this
+                        # to the matrix section.
+      # Used by atropy ci-helpers
+      CONDA_CHANNELS: "defaults conda-forge"
   matrix:
     - PYTHON_VERSION: 3.6
-      PYTHON_ARCH: "64"
-      MINICONDA: C:\Miniconda3-x64
-    #- PYTHON_VERSION: 2.7
-    #  PYTHON_ARCH: "64"
-    #  MINICONDA: C:\Miniconda-x64
-    # not running the other tests at the moment
-    # as AppVeyor is just too slow
-    #- PYTHON_VERSION: 2.7
-    #  PYTHON_ARCH: "32"
-    #  MINICONDA: C:\Miniconda
-    #- PYTHON_VERSION: 3.5
-    #  PYTHON_ARCH: "32"
-    #  MINICONDA: C:\Miniconda3
-
-init:
-  - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH% %MINICONDA%"
+      REQUIREMENTS_FILE: "requirements_engine.txt"
+      PYTEST_PATH: "."
+    - PYTHON_VERSION: 2.7
+      REQUIREMENTS_FILE: "requirements.txt"
+      PYTEST_PATH: "freediscovery/tests/"
 
 install:
-  - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-  # create a conda virtual environement 
-  - "cd C:\\projects\\freediscovery"
-  - conda config --append channels conda-forge
-  - "conda create -n freediscovery-env --yes --file requirements.txt python=%PYTHON_VERSION%"
-  - activate freediscovery-env
+  # If there is a newer build queued for the same PR, cancel this one.
+  # The AppVeyor 'rollout builds' option is supposed to serve the same
+  # purpose but it is problematic because it tends to cancel builds pushed
+  # directly to master instead of just PR builds (or the converse).
+  # credits: JuliaLang developers.
+  - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
+        https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=50).builds | `
+        Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
+          throw "There are newer queued builds for this pull request, failing early." }
+  - "git clone --depth 1 git://github.com/astropy/ci-helpers.git"
+  - "powershell ci-helpers/appveyor/install-miniconda.ps1"
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+  - "activate test"
+  - conda install --file %REQUIREMENTS_FILE%
   - python setup.py develop 
 
 test_script:
-  - activate freediscovery-env # activate the virtualenv
-  - "cd C:\\projects\\freediscovery"
-  - "py.test -sv" 
-  # install matplotlib which we don't add as a core dependency but which is used in examples
+  - activate test # activate the virtualenv
+  - pytest -sv %PYTEST_PATH%
   - pip install matplotlib==1.5.3
-  # now start the server and run the examples
-  - ps: Start-Process -FilePath "freediscovery" -ArgumentList "run -y --cache-dir ..\\freediscovery_shared" -WorkingDirectory ".\\" -Verbose
-  - ps: |
-        cd ".\\examples\\python"
-        Get-ChildItem ".\\" -Filter *.py | 
-        Foreach-Object {
-            python $_.FullName 2>&1 | Tee-Object -Append -FilePath "log.txt"
-        }
-        cd "..\\engine"
-        Get-ChildItem ".\\" -Filter *.py | 
-        Foreach-Object {
-            python $_.FullName 2>&1 | Tee-Object -Append -FilePath "log.txt"
-        }
-        type "..\\..\\..\\freediscovery_shared\\freediscovery-backend.log"
-        if (sls "Traceback \(most recent call last\):" log.txt -ca -quiet) {
-            exit 1
-        }
+  - ps: | 
+          cd ".\\examples\\python"
+          Get-ChildItem ".\\" -Filter *.py | 
+          Foreach-Object {
+              python $_.FullName 2>&1 | Tee-Object -Append -FilePath "C:\\log.txt"
+          }
+
+
+          if ($PYTHON_VERSION -eq 3.6 ) {
+              # install matplotlib which we don't add as a core dependency but which is used in examples
+              # now start the server and run the examples
+              Start-Process -FilePath "freediscovery" -ArgumentList "run -y --cache-dir ..\\freediscovery_shared" -WorkingDirectory ".\\" -Verbose
+              
+              cd "..\\engine"
+              Get-ChildItem ".\\" -Filter *.py | 
+              Foreach-Object {
+                  python $_.FullName 2>&1 | Tee-Object -Append -FilePath "C:\\log.txt"
+              }
+              type "..\\..\\..\\freediscovery_shared\\freediscovery-backend.log"
+              if (sls "Traceback \(most recent call last\):" "..\\..\\..\\freediscovery_shared\\freediscovery-backend.log"  -ca -quiet) {
+                  exit 1
+              }
+          } 
+          type "C:\\log.txt"
+          if (sls "Traceback \(most recent call last\):" "C:\\log.txt" -ca -quiet) {
+              exit 1
+          }
+          
 
