--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,10 @@ env:
       REQUIREMENTS="requirements_engine.txt" EXTRA_DEPS=""
     - PYTHON_VERSION="3.6"
       REQUIREMENTS="requirements_engine.txt" EXTRA_DEPS="simhash-py gunicorn"
-    #- python: "3.5"
-    #- env: REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS="" SKLEARN_OLD=false
     - PYTHON_VERSION="3.5" 
       REQUIREMENTS="requirements.txt" EXTRA_DEPS="pytest"
-    - PYTHON_VERSION="3.5" 
-      REQUIREMENTS="requirements.txt" EXTRA_DEPS="pytest scikit-learn=0.18.1"
+    - PYTHON_VERSION="3.5"
+      REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS="pytest"
     - PYTHON_VERSION="2.7" 
       REQUIREMENTS="requirements.txt" EXTRA_DEPS="pytest"
 
