--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,15 @@ env:
     - CONDA_CHANNELS="defaults conda-forge"
     matrix:
     - PYTHON_VERSION="3.6"
-      REQUIREMENTS="requirements_engine.txt" EXTRA_DEPS=""
+      REQUIREMENTS="requirements_engine.txt" EXTRA_DEPS="nose"
     - PYTHON_VERSION="3.6"
-      REQUIREMENTS="requirements_engine.txt" EXTRA_DEPS="simhash-py gunicorn"
+      REQUIREMENTS="requirements_engine.txt" EXTRA_DEPS="simhash-py gunicorn pytest nose"
     - PYTHON_VERSION="3.6" 
-      REQUIREMENTS="requirements.txt" EXTRA_DEPS="pytest"
+      REQUIREMENTS="requirements.txt" EXTRA_DEPS="pytest nose"
       #- PYTHON_VERSION="3.5"
       #- REQUIREMENTS="build_tools/requirements_compat.txt" EXTRA_DEPS="pytest"
     - PYTHON_VERSION="2.7" 
-      REQUIREMENTS="requirements.txt" EXTRA_DEPS="pytest"
+      REQUIREMENTS="requirements.txt" EXTRA_DEPS="pytest nose"
 
 install: 
     - git clone --depth 1 git://github.com/astropy/ci-helpers.git
