--- a/requirements_engine.txt
+++ b/requirements_engine.txt
@@ -6,6 +6,6 @@ nltk>=3.2.1
 pytest>=3.0.1
 flask>=0.12.0         # web libraries
 requests>=2.7.0
-marshmallow>=2.12.2
+marshmallow>=2.12.2,<2.99
 webargs>=1.5.3
 flask-apispec>=0.3.2
