--- a/circle.yml
+++ b/circle.yml
@@ -27,6 +27,8 @@ dependencies:
     - sleep 20
     # The pipefail is requested to propagate exit code
     - set -o pipefail && cd doc && source activate testenv && make html 2>&1 | tee ~/log.txt
+    # use HTTP for NPM to avoid connection issues
+    - npm config set registry http://registry.npmjs.org/
     - npm install -g bootprint && npm install -g bootprint-openapi
     - cd doc && bootprint openapi http://0.0.0.0:5001/openapi-specs.json openapi-docs && cp -r openapi-docs/ _build/html/
 
