--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ install:
   # https://github.com/conda/conda/issues/1753
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PYTHON%\\Library\\bin;%PATH%"
   - conda install -y --file %REQUIREMENTS_FILE%
-  - pip install nose
+  - pip install nose pytest
   - pip install -e .
 
 test_script:
