--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,20 +3,22 @@ build: false
 
 environment:
   global:
-      PYTHON: "C:\\conda"
-      CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci-helpers\\appveyor\\windows_sdk.cmd"
       PYTHON_ARCH: "64" # needs to be set for CMD_IN_ENV to succeed. If a mix
                         # of 32 bit and 64 bit builds are needed, move this
                         # to the matrix section.
       # Used by atropy ci-helpers
-      CONDA_CHANNELS: "defaults conda-forge"
   matrix:
-    - PYTHON_VERSION: 3.6
-      REQUIREMENTS_FILE: "requirements_engine.txt"
-      PYTEST_PATH: "."
-    - PYTHON_VERSION: 2.7
+    - PYTHON: "C:\\Miniconda-x64"
+      PYTHON_VERSION: "2.7.x"
+      PYTHON_ARCH: "64"
       REQUIREMENTS_FILE: "requirements.txt"
       PYTEST_PATH: "freediscovery/tests/"
+
+    - PYTHON: "C:\\Miniconda3-x64"
+      PYTHON_VERSION: "3.6.x"
+      PYTHON_ARCH: "64"
+      REQUIREMENTS_FILE: "requirements_engine.txt"
+      PYTEST_PATH: "."
 
 install:
   # If there is a newer build queued for the same PR, cancel this one.
@@ -28,18 +30,18 @@ install:
         https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=50).builds | `
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
           throw "There are newer queued builds for this pull request, failing early." }
-  - "git clone --depth 1 git://github.com/astropy/ci-helpers.git"
-  - "powershell ci-helpers/appveyor/install-miniconda.ps1"
-  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
-  - "activate test"
-  - conda install --file %REQUIREMENTS_FILE%
-  - conda install nose
-  - python setup.py develop 
+  # Prepend miniconda installed Python to the PATH of this build
+  # Add Library/bin directory to fix issue
+  # https://github.com/conda/conda/issues/1753
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PYTHON%\\Library\\bin;%PATH%"
+  - conda config --append channels conda-forge
+  - conda install -y --file %REQUIREMENTS_FILE%
+  - pip install nose pytest
+  - pip install -e .
 
 test_script:
-  - activate test # activate the virtualenv
   - pytest -sv %PYTEST_PATH%
-  - pip install matplotlib==1.5.3
+  - conda install -y matplotlib==2.2.3
   - ps: | 
           cd ".\\examples\\python"
           Get-ChildItem ".\\" -Filter *.py | 
