--- a/requirements_engine.txt
+++ b/requirements_engine.txt
@@ -7,5 +7,5 @@ pytest>=3.0.1
 flask>=0.12.3         # web libraries
 requests>=2.7.0
 marshmallow>=2.12.2,<2.99
-webargs>=1.5.3
+webargs>=1.5.3,<4.2
 flask-apispec>=0.3.2
