--- a/requirements_engine.txt
+++ b/requirements_engine.txt
@@ -1,7 +1,7 @@
 numpy>=1.10.1       # core  libraries
-scipy>=0.16.1
-pandas>=0.19.0
-scikit-learn>=0.19.1
+scipy>=0.16.1,<1.2.0
+pandas>=0.19.0,<0.24.0
+scikit-learn>=0.19.1,<0.21
 nltk>=3.2.1
 pytest>=3.0.1
 flask>=0.12.3         # web libraries
